# turtlebot4

./: restaurant_map.md  restaurant_positions.md  setup_env.sh
instruction/: aruco_localization_instruction.md  sim_to_real_analysis.md  tarkbot_vs_tb4_analysis.md
src/: .gitignore  PLANNING_RESTAURANT_SIMULATION.md
src/.git_backup_20260328_174620/: COMMIT_EDITMSG  FETCH_HEAD  config  index
src/.git_backup_20260328_174620/logs/: HEAD
src/.git_backup_20260328_174620/logs/refs/heads/: main
src/.git_backup_20260328_174620/logs/refs/remotes/origin/: main
src/.git_backup_20260328_174620/refs/heads/: main
src/.git_backup_20260328_174620/refs/remotes/origin/: main
src/tarkbot_robot/: package.xml  setup.cfg  setup.py
src/tarkbot_robot/config/: ekf.yaml  robot.yaml
src/tarkbot_robot/launch/: ekf_visualization.launch.py  robot.launch.py
src/tarkbot_robot/rviz/: ekf_path.rviz
src/tarkbot_robot/tarkbot_robot/: __init__.py  data_converter.py  path_publisher.py  robot_node.py  serial_protocol.py
src/turtlebot4/turtlebot4_navigation/launch/: localization.launch.py
src/turtlebot4/turtlebot4_navigation/maps/: restaurant.pgm  restaurant.yaml
src/turtlebot4_simulator/turtlebot4_ignition_bringup/launch/: turtlebot4_ignition.launch.py  turtlebot4_spawn.launch.py
src/turtlebot4_simulator/turtlebot4_ignition_bringup/worlds/: restaurant.sdf  restaurant_map.md  warehouse.sdf
src/turtlebot4_tutorials/turtlebot4_python_tutorials/turtlebot4_python_tutorials/: mail_delivery.py
