<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tarkbot_robot</name>
  <version>2.0.0</version>
  <description>TarkBot R20 Robot ROS2 Python Driver Package</description>

  <!-- Maintainer -->
  <maintainer email="xtark@xtark.cn">XTARK</maintainer>

  <!-- License -->
  <license>Apache-2.0</license>

  <!-- Author -->
  <author email="xtark@xtark.cn">XTARK Robotics</author>

  <!-- URLs -->
  <url type="website">https://www.xtark.cn</url>
  <url type="repository">https://github.com/xtark/tarkbot_robot</url>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build and Runtime Dependencies -->
  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>python3-serial</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
